update to conditional

--- a/basic/primitive.qmd
+++ b/basic/primitive.qmd
@@ -1,9 +1,9 @@
 ---
-title: "Primitive"
+title: "Primitive Types"
 ---
 
 ```{r setup, include=FALSE}
-here::i_am("primitive.qmd")
+here::i_am("basic/primitive.qmd")
 options(reticulate.repl.quiet = TRUE) # To quiet python interpreter
 knitr::opts_chunk$set(collapse = TRUE)
 library(reticulate)
