--- a/basic/number.qmd
+++ b/basic/number.qmd
@@ -4,7 +4,7 @@ title: "Number"
 
 
 ```{r setup, include=FALSE}
-here::i_am("number.qmd")
+here::i_am("basic/number.qmd")
 options(reticulate.repl.quiet = TRUE) # To quiet python interpreter
 knitr::opts_chunk$set(collapse = TRUE)
 library(reticulate)
