--- a/basic/loop.qmd
+++ b/basic/loop.qmd
@@ -3,12 +3,12 @@ title: "Loop"
 ---
 
 ```{r setup, include=FALSE}
-here::i_am("basic/loop.qmd")
-options(reticulate.repl.quiet = TRUE) # To quiet python interpreter
-knitr::opts_chunk$set(collapse = TRUE)
-library(reticulate)
 library(here)
+here::i_am("basic/loop.qmd")
+source(here("_common.R"))
 ```
+
+
 
 ## For Loop
 
