--- a/basic/string.qmd
+++ b/basic/string.qmd
@@ -4,11 +4,9 @@ format: html
 ---
 
 ```{r setup, include=FALSE}
-here::i_am("basic/string.qmd")
-options(reticulate.repl.quiet = TRUE) # To quiet python interpreter
-knitr::opts_chunk$set(collapse = TRUE)
-library(reticulate)
 library(here)
+here::i_am("basic/string.qmd")
+source(here("_common.R"))
 ```
 
 `Python`
