auto-freeze update

--- a/basic/string.qmd
+++ b/basic/string.qmd
@@ -143,4 +143,14 @@ Logical testing with string
 "java" not in course
 ```
 
+### Format String
+
+[Literal string interpolation](https://peps.python.org/pep-0498/)
+
+Group 3 digits with `,`
+
+```{python}
+num = 1000000
+f"{num:,}"
+```
 
