--- a/basic/oop.qmd
+++ b/basic/oop.qmd
@@ -244,6 +244,92 @@ miles.speak()
 buddy.speak()
 ```
 
+## Class Method (Dunder)
+
+### String Representation `__repr__`, `__str__`
+
+```{python}
+class Pair:
+    def __init__(self, x, y):
+        self.x = x
+        self.y = y
+    def __repr__(self):
+        return 'Pair({0.x!r}, {0.y!r})'.format(self) 
+    def __str__(self):
+        return '({0.x!s}, {0.y!s})'.format(self)
+```
+
+```{python}
+p = Pair(3, 4)
+p
+```
+
+the special !r formatting code indicates that the output of `__repr__()` should be used
+
+```{python}
+print('p is {0!r}'.format(p)) 
+print('p is {0}'.format(p))
+```
+
+### String Formatting `__format__()`
+
+```{python}
+_formats = {
+        'ymd' : '{d.year}-{d.month}-{d.day}',
+        'mdy' : '{d.month}/{d.day}/{d.year}',
+        'dmy' : '{d.day}/{d.month}/{d.year}'
+        }
+
+class Date:
+    def __init__(self, year, month, day):
+                self.year = year
+                self.month = month
+                self.day = day
+    def __format__(self, code): 
+        if code == '':
+            code = 'ymd'    
+        fmt = _formats[code] 
+        return fmt.format(d=self)
+```
+
+```{python}
+d = Date(2012, 12, 21)
+format(d)
+format(d, 'mdy')
+'The date is {:ymd}'.format(d)
+```
+
+### Setter / Getter
+
+```{python}
+class Person:
+    def __init__(self, first_name):
+        self.first_name = first_name
+    # Getter function
+    @property
+    def first_name(self): 
+        return self._first_name
+    # Setter function
+    @first_name.setter
+    def first_name(self, value):
+        if not isinstance(value, str):
+            raise TypeError('Expected a string') 
+        self._first_name = value
+    # Deleter function (optional)
+    @first_name.deleter
+    def first_name(self):
+        raise AttributeError("Can't delete attribute")
+```
+
+```{python}
+a = Person('Guido')
+a.first_name
+```
+
+```{python}
+a.first_name = 42
+```
+
 ## DataClass
 
 
