--- a/basic/data-str.qmd
+++ b/basic/data-str.qmd
@@ -153,3 +153,52 @@ nested_list = [["a"], ["b", "c"], ["d"]]
 flattened_list = sum(nested_list, [])
 flattened_list
 ```
+
+## Sets
+
+```{python}
+a = {'a', 'b', 'c' }
+b = {'c', 'd'}
+
+print(a | b)
+
+print(a & b)
+
+print(a - b)
+
+print(a ^ b) # Symmetric difference 
+```
+
+## Operation
+
+### Slicing
+
+```{python}
+a = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+
+a[2:5]     # [2, 3, 4]
+a[:3]      # [0, 1, 2]
+a[-3:]     # [7, 8, 9]
+a[::2]     # [0, 2, 4, 6, 8 ]
+a[::-2]    # [9, 7, 5, 3, 1 ]
+a[0:5:2]   # [0, 2]
+a[5:0:-2]  # [5, 3, 1]
+a[:5:1]    # [0, 1, 2, 3, 4]
+a[:5:-1]   # [9, 8, 7, 6]
+a[5::1]    # [5, 6, 7, 8, 9]
+a[5::-1]   # [5, 4, 3, 2, 1, 0]
+a[5:0:-1]  # [5, 4, 3, 2, 1]
+```
+
+### Slice Naming
+
+```{python}
+firstfive = slice(0, 5)
+s = 'hello world'
+
+firstfive
+```
+
+```{python}
+print(s[firstfive])
+```
